create a proper library out of the jar.