@@ -2,14 +2,47 @@
 Kotlin bindings for Shiro's Chess bot API for the Neurocord Chess bot tournament
 
 ## Usage
-- Download a jar file from releases or build the chess-api artifact from the source
-- Put the jar file anywhere you want, and make sure libchessapi.so compiled from Shiro's code is in `native/libchessapi.so`, compilation steps:
-```bash
-git pull https://github.com/shiro-nya/2025-chess-bot-tournament.git
-cd 2025-chess-bot-tournament
-gcc -fPIC -shared ./src/c/chessapi.c ./src/c/bitboard.c -Isrc/c -o libchessapi.so
+- include the built jar in your project, either the built jar or via jitpack
+
+```kotlin
+repositories {
+    mavenCentral()
+    maven { url = uri("https://www.jitpack.io") }
+}
+dependencies {
+    implementation("com.github.Superbox2147:chess-api-kt:<latest tag>")
+}
 ```
-- Include the jar file in your Gradle project with `implementation(files("path/to/chess-api.jar"))`
+or via maven:
+pom.xml
+```xml
+<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://www.jitpack.io</url>
+		</repository>
+	</repositories>
+```
+dependency:
+```xml
+
+<dependency>
+    <groupId>com.github.Superbox2147</groupId>
+    <artifactId>chess-api-kt</artifactId>
+    <version>latest tag</version>
+</dependency>
+```
+- add `--enable-native-access=ALL-UNNAMED` to your application's  jvm arguments. This is required so java can load the native binary that is a part of this library.
+ with gradle:
+```kotlin
+application {
+    mainClass.set("main class")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+}
+```
+
+To use it with cutechess, wrap your application in a shell script and pick that script as the engine.
+Gradle's application plugin does this for you.
 
 ## Example
 Simple bot that makes random moves, same as the one found in the original repository
